# MultichannelNumerovCPP

./: CMakeLists.txt  MN.h  Parameters.cpp  Parameters.h  Solver.cpp  Solver.h  State.cpp  State.h  Tester.cpp  Tester.h  main.cpp
